[package]
name = "davinci"
version = "0.1.0"
description = "A crate for simply using davinci model from OpenAi API"
edition = "2021"
authors = ["Oussamaosman02"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ai", "openai", "davinci", "api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
